@@ -2,6 +2,7 @@ ChangeLog for Pylint
 ====================
 
 --
+    * Names of derived instance class member are not checked any more.
     * Names in global statements are now checked against the regular
       expression for constants.
     * For toplevel name assignment, the class name regex will be used if
